//
// Copyright 2021 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.functions.abi;

// Status values exchanged as i32 values across the Node Wasm interface.
enum OakStatus {
  UNSPECIFIED = 0;
  // Success.
  OK = 1;
  // Arguments invalid.
  ERR_INVALID_ARGS = 2;
  // Provided buffer was too small for operation (an output value will indicate required size).
  ERR_BUFFER_TOO_SMALL = 3;
  // Internal error.
  ERR_INTERNAL = 4;
  // Lookup storage item not found.
  ERR_STORAGE_ITEM_NOT_FOUND = 5;
}
